Sun May 18 20:00:58 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * tests/ACE_Init_Test.cpp:
          Added include of ACE.h.

        * tests/test_config.h:
          Added Test_Output_Export to randomize() declaration.

        * tests/tests.dws:
        * tests/Test_Output.dsp:
		  Added new project file, Test_Output.dsp, and added it to tests.dsw.

        * tests/*.dsp:
          Added Test_Output[*].lib and Main.cpp source to all projects (except dlls).

        * tests/RMCast/*.dsp:
          Added Test_Output[d].lib to all project files.

Sun May 18 19:18:45 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        Merged up tests changes.

        Sun May 18 18:21:00 UTC 2003  Don Hinton  <dhinton@dresystems.com>

          * tests/tests.mpc:
            Added Test_Output library and Main.cpp to all objects.

          * tests/RMCAST/Makefile.bor:
          * tests/RMCAST/tests.mpc:
          * tests/SSL/Makefile:
          * tests/SSL/Makefile.bor:
          * tests/SSL/tests.mpc:
            Added Test_Output library to all objects.

        Sun May 18 17:32:29 UTC 2003  Don Hinton  <dhinton@dresystems.com>

          * tests/Makefile.bor:
          * tests/Test_Output.bor:
            Added new Borland Makefile, tests/Test_Output.bor and modified
            Makefile.bor to call it and link Test_Output.lib for all objects
            and add Main.obj to OBJFILES.

          * tests/test_config.h:
          * tests/Test_Output_Export.h:
            Added tests/Test_Output_Export.h and added Test_Output_Export to
            Test_Output class declaration.

        Sun May 18 00:04:17 UTC 2003  Don Hinton  <dhinton@dresystems.com>

          Merged dre_030425 up to the main and rebranched to dre_test_01.

        Sat May 17 19:31:43 UTC 2003  Don Hinton  <dhinton@dresystems.com>

          * ace/Codecs.h:
          * ace/Unbounded_Set.inl:
          * ace/Unbounded_Set_Ex.inl:
            Added include of ace/Global_Macros.h:
